<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iphone_6_6s_wallpaper__1___"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="115dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/Menu1"
        android:textColor="@color/white"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:onClick="TestsButton"
        android:id="@+id/button1"
        android:layout_width="290dp"
        android:layout_height="65dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.5"
        android:fontFamily="@font/aldrich"
        android:text="@string/Tests"
        android:textSize="20sp"
        app:cornerRadius="21dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="290dp"
        android:layout_height="65dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="21dp"
        android:alpha="0.5"
        android:fontFamily="@font/aldrich"
        android:text="@string/Articles"
        android:textSize="20sp"
        app:cornerRadius="21dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="290dp"
        android:layout_height="65dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.5"
        android:fontFamily="@font/aldrich"
        android:text="@string/Calendars"
        android:textSize="20sp"
        app:cornerRadius="21dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="290dp"
        android:layout_height="65dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="160dp"
        android:alpha="0.5"
        android:fontFamily="@font/aldrich"
        android:text="@string/Settings"
        android:textSize="20sp"
        app:cornerRadius="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />



</androidx.constraintlayout.widget.ConstraintLayout>